# Aigle-d-or

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/CPU/: Cpu6502.cpp  Cpu6502.h
Core/Hardware/: AySound.cpp  AySound.h  MemoryBus.cpp  MemoryBus.h  Ula.cpp  Ula.h  Via.cpp  Via.h
Core/Media/: FileLoader.cpp  FileLoader.h  TapLoader.cpp  TapLoader.h
GUI/: EmulatorThread.cpp  EmulatorThread.h  MainWindow.cpp  MainWindow.h  ScreenWidget.cpp  ScreenWidget.h
TAPS/: README.txt
